# shell.js

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  main.c
examples/: ex1.js
js-clib/: common.c  common.h  jsc_file.c  jsc_file.h  jsc_net.c  jsc_net.h  jsc_sys.c  jsc_sys.h
platform/: plat_io.h  plat_mgn_mem.h
